fix img profile + name when restore game and fix canvas bg color so visible in light mode

--- a/ft_transcendence/static/games.css
+++ b/ft_transcendence/static/games.css
@@ -15,6 +15,7 @@
     border-radius: 10px;
     border: 10px solid #451b96;
     margin: 10px auto;
+    background-color: #313131;
 }
 
 #muteButton {
